Adds working local development files

--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
     "postinstall": "cd client && npm install",
     "clean": "rm -f app/assets/webpack/*"
   },
-  "cacheDirectories": ["node_modules", "client/node_modules"]
+  "cacheDirectories": [
+    "node_modules",
+    "client/node_modules"
+  ],
+  "dependencies": {
+    "react": "^15.6.2"
+  }
 }
